fix wpforms toggle font size and alignment

--- a/+/styles/wpforms.css
+++ b/+/styles/wpforms.css
@@ -39,3 +39,7 @@
 :--namespace form.glsr-form .glsr-recaptcha-holder {
     margin-top: var(--glsr-base-font-size);
 }
+:--namespace form.glsr-form .glsr-toggle .glsr-toggle-switch,
+:--namespace form.glsr-form .glsr-field-toggle label {
+    font-size: var(--glsr-base-font-size);
+}
